--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,4 +1,7 @@
+<h3>Student Form</h3>
+
 <%= form_tag students_path do %>
-  <label>Student Form</label>
-  <input type="text" id="first_name"
+  <label>First Name:</label>
+  <input type="text" id="first_name" name="student[first_name"><br>
+  
 <% end %>
