--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -2,6 +2,8 @@
 
 <%= form_tag students_path do %>
   <label>First Name:</label>
-  <input type="text" id="first_name" name="student[first_name"><br>
+  <input type="text" id="first_name" name="student[first_name]"><br>
+  <label>Last Name:</label>
+  <input type="text" id="last_name" name="student[last_name]"><br>
   
 <% end %>
