Automatically backed up by Learn

--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -6,5 +6,5 @@
   <label>Last Name:</label>
   <input type="text" id="last_name" name="student[last_name]"><br>
   
-  <%= submit_tag "Create Student" %>
+  <%= submit_tag "Submit Student" %>
 <% end %>
