--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -2,9 +2,9 @@
 
 <%= form_tag students_path do %>
   <label>First Name:</label>
-  <input type="text" id="first_name" name="student[first_name]"><br>
+  <%= text_field_tag :'student[first_name]' %><br>
   <label>Last Name:</label>
-  <input type="text" id="last_name" name="student[last_name]"><br>
+  <%= text_field_tag :'student[last_name]' %><br>
   
   <%= submit_tag "Submit Student" %>
 <% end %>
